# fylab

./: README.md  pyproject.toml
doc/: MANUAL.md  gen_figures.py
doc/coverage/: class_index.html  function_index.html  index.html  status.json  z_30586ebd2e56abff___init___py.html  z_30586ebd2e56abff_account_py.html  z_30586ebd2e56abff_cashflow_py.html  z_30586ebd2e56abff_currency_py.html  z_30586ebd2e56abff_portfolio_py.html  z_38d9c05ef39a6fb9___init___py.html  z_38d9c05ef39a6fb9_cashflow_chart_py.html  z_38d9c05ef39a6fb9_graph_viz_py.html  z_38d9c05ef39a6fb9_portfolio_chart_py.html  z_4b00904170c53fc2___init___py.html  z_4b00904170c53fc2_portfolio_opt_py.html  z_4b00904170c53fc2_risk_py.html  z_7555c14fff732a0c___init___py.html  z_7555c14fff732a0c_main_window_py.html  z_a9e5cce93379e6ba___init___py.html  z_a9e5cce93379e6ba_arbitrage_py.html  z_a9e5cce93379e6ba_max_flow_py.html  z_a9e5cce93379e6ba_mst_py.html  z_a9e5cce93379e6ba_subgraph_finance_py.html  z_ca4239d33f3f6e0c___init___py.html  z_ead84217e4c89887___init___py.html  z_ead84217e4c89887_account_widget_py.html  z_ead84217e4c89887_cashflow_widget_py.html  z_ead84217e4c89887_graph_widget_py.html  z_ead84217e4c89887_plot_widget_py.html  z_ead84217e4c89887_portfolio_widget_py.html  z_ead84217e4c89887_risk_widget_py.html
science/: fylab.tex
src/fylab/: __init__.py
src/fylab/algorithms/: __init__.py  arbitrage.py  max_flow.py  mst.py  subgraph_finance.py
src/fylab/analysis/: __init__.py  portfolio_opt.py  risk.py
src/fylab/core/: __init__.py  account.py  cashflow.py  currency.py  portfolio.py
src/fylab/gui/: __init__.py  main_window.py
src/fylab/gui/widgets/: __init__.py  account_widget.py  cashflow_widget.py  graph_widget.py  plot_widget.py  portfolio_widget.py  risk_widget.py
src/fylab/visualization/: __init__.py  cashflow_chart.py  graph_viz.py  portfolio_chart.py
tests/: conftest.py  test_account.py  test_algorithms.py  test_analysis.py  test_core.py  test_gui.py  test_visualization.py
