[project]
name = "fylab"
version = "1.0.0"
description = "Umfassendes Python-Framework für Finanzverwaltung, Portfolio-Optimierung und graphbasierte Finanzalgorithmen"
authors = [
    {name = "Stephan Epp"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "PyQt6>=6.4.0",
    "PyQt6-Qt6>=6.4.0",
    "subgraph @ git+https://github.com/hjstephan86/subgraph.git@v1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.2",
    "pylint>=4.0",
    "pdoc>=16.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
fylab-gui = "fylab.gui.main_window:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fylab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=html:doc/coverage",
    "--cov-report=term-missing",
]
filterwarnings = [
    # PyQt6 / sip interne Deprecation-Warnungen
    "ignore::DeprecationWarning:PyQt6",
    "ignore::DeprecationWarning:sip",
    # matplotlib / mpl_toolkits interne Warnungen
    "ignore::DeprecationWarning:matplotlib",
    "ignore::PendingDeprecationWarning:matplotlib",
    # Datei-Handle-Warnungen beim Schließen von Figures
    "ignore::ResourceWarning",
    # Qt-interne RuntimeWarnings
    "ignore::RuntimeWarning:PyQt6",
    # Matplotlib: mehr als 20 Figures gleichzeitig geöffnet (headless Tests)
    "ignore:More than 20 figures:RuntimeWarning",
    # pytest-qt cleanup
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "venv/*",
    "doc/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
